# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.97 - XXX

  From John Pye:

  - Fix env.MergeFlags() appending to construction variable value of None.



RELEASE 0.96.93 - Mon, 06 Nov 2006 00:44:11 -0600

  NOTE:  This is a pre-release of 0.97 for testing purposes.

  From Anonymous:

  - Allow Python Value Nodes to be Builder targets.

  From Matthias:

  - Only filter Visual Studio common filename prefixes on complete
    directory names.

  From Chad Austin:

  - Fix the build of the SCons documentation on systems that don't
    have "python" in the $PATH.

  From Ken Boortz:

  - Enhance ParseConfig() to recognize options that begin with '+'.

  From John Calcote, Elliot Murphy:

  - Document ways to override the CCPDBFLAGS variable to use the
    Microsoft linker's /Zi option instead of the default /Z7.

  From Christopher Drexler:

  - Make SCons aware bibtex must be called if any \include files
    cause creation of a bibliography.

  - Make SCons aware that "\bilbiography" in TeX source files means
    that related .bbl and .blg bibliography files will be created.
    (NOTE:  This still needs to search for the string in \include files.)

  From David Gruener:

  - Fix inconsistent handling of Action strfunction arguments.

  - Preserve white space in display Action strfunction strings.

  From James Y. Knight and Gerard Patel:

  - Support creation of shared object files from assembly language.

  From Steven Knight:

  - Speed up the Taskmaster significantly by avoiding unnecessary
    re-scans of Nodes to find out if there's work to be done, having it
    track the currently-executed top-level target directly and not
    through its presence on the target list, and eliminating some other
    minor list(s), method(s) and manipulation.

  - Fix the expansion of $TARGET and $SOURCE in the expansion of